--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -177,7 +177,7 @@
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
-                      <strong>PhEmailone:</strong>
+                      <strong>Email:</strong>
                       <span>ashrafulsifat26@gmail.com</span>
                     </li>
                     <li>
